Remove GeneratedType.getEnumerations()
The content of this list can easily be transported via enclosedTypes,
let's do that instead of special-casing enumerations.

JIRA: YANGTOOLS-1897
Change-Id: I3aa32d54961ad74fa3ce4cb3246f7a1c162cb25a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>